# PepTrack

./: .gitignore  AGENTS.md  ANALYSIS_AND_FIXES.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONVERSATION_SUMMARY.md  Cargo.toml  README.md  REMAINING_IMPROVEMENTS.md  SETUP.md  TESTING.md
crates/core/: Cargo.toml
crates/core/src/: backup_encryption.rs  db.rs  encryption.rs  keychain.rs  lib.rs  models.rs
crates/literature/: Cargo.toml
crates/literature/src/: crossref.rs  lib.rs  models.rs  openalex.rs  pubmed.rs
crates/local-ai/: Cargo.toml
crates/local-ai/src/: lib.rs
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_2025-11-12.md  CURRENT_STATUS.md  GOOGLE_OAUTH_SETUP.md  IMPROVEMENT_IDEAS.md  PKG_BUILD.md  SECURITY_AUDIT_2025-11-12.md  TEST_IMPROVEMENTS_SUMMARY.md  TOP_10_IMPLEMENTATION_PLAN.md  WEB_SCRAPER_ARCHITECTURE.md  ai_assistant_persona.md  future_self.md  keychain_implementation.md  keychain_migration_plan.md  peptrack_future_self.md
docs/archive/: ABSOLUTE_PERFECTION_ACHIEVED.md  ENHANCEMENTS.md  FINAL_FIXES_SUMMARY.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: peptrack.ts
frontend/src/components/: AboutHelp.vue  AiSummaryPanel.vue  AlertsDashboard.vue  BackupAndRestore.vue  BackupExport.vue  BodyMetricsTracker.vue  CalendarIntegration.vue  CostAnalysisDashboard.vue  DarkModeToggle.vue  Dashboard.vue  DashboardWidgetSettings.vue  DoseCalendarHeatmap.vue  DoseScheduleManager.vue  DoseTracker.vue  EmptyState.vue  EnhancedAiSummary.vue  ErrorBoundary.vue  GlobalSearch.vue  GoogleDriveBackup.vue  InventoryManagement.vue  InventoryPredictions.vue  KeyboardShortcutsHelp.vue  LiteratureSearch.vue  LoadingSkeleton.vue  NotificationPreferences.vue  OnboardingFlow.vue  PriceChart.vue  ProtocolForm.vue  ProtocolList.vue  ProtocolProgressTracker.vue  ProtocolRecommender.vue  QuickActionsFAB.vue  RecentActivityTimeline.vue  ReconstitutionCalculator.vue  ReportGenerator.vue  Research.vue  RestoreBackup.vue  ScheduledBackup.vue  Settings.vue  SideEffectsTracker.vue  (+3 more)
frontend/src/components/__tests__/: BackupExport.spec.ts  Dashboard.spec.ts  DoseTracker.spec.ts  EnhancedAiSummary.spec.ts  GoogleDriveBackup.spec.ts  LiteratureSearch.spec.ts  ProtocolForm.spec.ts  ProtocolList.spec.ts  Settings.spec.ts  SupplierManagement.spec.ts
frontend/src/composables/: index.ts  useDoses.ts  useLiterature.ts  useProtocols.ts  useReminderService.ts  useSuppliers.ts
frontend/src/composables/__tests__/: useDoses.spec.ts  useLiterature.spec.ts  useProtocols.spec.ts  useReminderService.spec.ts  useSuppliers.spec.ts
frontend/src/stores/: doses.ts  index.ts  literature.ts  protocols.ts  suppliers.ts  ui.ts
frontend/src/stores/__tests__/: doses.spec.ts  literature.spec.ts  protocols.spec.ts  suppliers.spec.ts  ui.spec.ts
frontend/src/utils/: darkMode.ts  dateFormatter.ts  errorHandling.ts  notifications.ts  widgets.ts
frontend/src/utils/__tests__/: errorHandling.spec.ts
scripts/: build_pkg.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: ai.rs  analytics.rs  backup.rs  body_metrics.rs  defaults.rs  doses.rs  drive.rs  health.rs  literature.rs  mod.rs  protocols.rs  restore.rs  scheduler.rs  scheduler_v2.rs  schedules.rs  side_effects.rs  suppliers.rs
