[workspace]
members = [
  "src-tauri",
  "crates/core",
  "crates/local-ai",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.91.1"
version = "0.1.0"
license = "MIT"
authors = ["PepTrack Contributors"]

[workspace.dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.12"
tracing = "0.1.41"
once_cell = "1.20.2"
