[package]
name = "peptrack-tauri"
description = "PepTrack desktop application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
tauri = { version = "2.9.2", features = ["native-tls"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
open = "5"
peptrack-core = { path = "../crates/core" }
peptrack-local-ai = { path = "../crates/local-ai" }
peptrack-literature = { path = "../crates/literature" }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = "0.8.5"
hex = "0.4.3"
dirs = "5.0.1"
time = { version = "0.3.37", features = ["macros", "serde"] }
oauth2 = "4.4"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
flate2 = "1.0"
fslock = "0.2"
base64 = "0.22"
regex = "1.11"
