[package]
name = "peptrack-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
rusqlite = { version = "0.32.1", features = ["bundled", "blob"] }
zeroize = "1.8.1"
chacha20poly1305 = "0.11.0-rc.2"
rand = "0.8.5"
time = { version = "0.3.37", features = ["macros", "serde"] }
dirs = "5.0.1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
hex = "0.4.3"
