[package]
name = "peptrack-literature"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3.37", features = ["macros", "serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
async-trait = "0.1"
peptrack-core = { path = "../core" }
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
