[package]
name = "peptrack-local-ai"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1.41.1", features = ["process", "macros", "rt-multi-thread", "io-util"] }
async-trait = "0.1.83"
which = "5.0.0"
regex = "1.11.1"
